<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">2016 Primary Tracker</string>
    <string name="select_party">Select Party:</string>
    <string name="action_settings">Settings</string>
    <string name="dem">Democratic</string>
    <string name="gop">Republican</string>
    <string name="show_candidates">Show Candidates</string>
    <string name="select_candidate">Select Candidate:</string>
    <string name="poll_average">National Poll Average (Pct)</string>
    <string name="party">Party</string>
    <string name="place">Place</string>
</resources>
